# Get_static_library_by_cmake

./: CMakeLists.txt  README.md
include/: MyClassTest.h
src/: MyClassTest.cpp
test/: CMakeLists.txt
test/src/: main.cpp
